cluster-bootstrap/argocd/base/argocd_server_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd-server
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    name: argocd-server
    kind: Service
